--- a/plugin.xml
+++ b/plugin.xml
@@ -12,6 +12,13 @@
     <license>BSD-3-Clause</license>
     
     <author>Salesforce Marketing Cloud</author>
+
+    <dependency id="cordova-outsystems-firebase-core" url="https://github.com/OutSystems/cordova-outsystems-firebase-core#1.0.0"/> 
+  
+    <preference name="APP_ID" default=""/>
+    <preference name="ACCESS_TOKEN" default=""/>
+    <preference name="TENANT_SPECIFIC_ENDPOINT" default=""/>
+    <preference name="NOTIFICATION_SMALL_ICON" default=""/>
     
     <!-- cordova -->
     <engines>
